# marslab

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: tests_ubuntu.yml  ubuntu_tests.yml
marslab/: __init__.py  anaglyph_tests.ipynb  bandset.py  composition.py  geom.py  imgops.py  op_lunch_demo.ipynb  parse.py  pipeline.py  poolutils.py  slowtime.py  spectops.py  time.py
marslab/bandset/: __init__.py  bandset.py  clementine.py  m3.py  mastcam.py  mastcamz.py  pancam.py
marslab/compat/: __init__.py  clementine.py  m3.py  mertools.py  sel_to_roi.py  xcam.py
marslab/compat/data/: m3_global_channels.csv  m3_global_crosstrack_correction.csv  m3_global_wavelengths.csv  m3_target_channels.csv  m3_target_crosstrack_correction.csv  m3_target_fwhm.csv  m3_target_wavelengths.csv
marslab/demos/: clementine.py  config.py  m3.py  mastcam.py  op_lunch_demo.ipynb
marslab/extras/: cmaps.py
marslab/imgops/: bandset.py  debayer.py  imgstats.py  imgutils.py  loaders.py  look.py  masking.py  pltutils.py  poolutils.py  regions.py  render.py
marslab/tests/: .coveragerc  test_bandset.py  test_debayer.py  test_debayer_fuzzer.py  test_geom.py  test_imgops.py  test_imgutils.py  test_look.py  test_mertools.py  test_pltutils.py  test_regions.py  test_render.py  test_render_fuzzer.py  test_spectops.py  test_xcam.py
marslab/tests/data/: coords.lbl  test_cases.py
marslab/tests/utilz/: bandset_utilz.py  div0.py  utilz.py
